header fixes, footer fixes, body layout, styling
- fixed header bugs: logo and description text cut off on mobile
- body copy should overlay correctly on mobile now

--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -27,14 +27,14 @@ button{
 }
 
 .descriptions{
-    margin-top: -10rem;
+    margin-top: -6rem;
 }
 
 .descriptions > div{
     background:#fff;
     box-shadow: 0 0.5rem 0.75rem 0.4rem rgba(0,0,0,0.2);
     margin: 1rem 0.8rem;
-    padding: 2rem 3rem;
+    /*padding: 2rem 3rem;*/
     border-radius: 0.5rem;
 }
 
